--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -14,8 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "nodemailer": "^6.9.15",
-    "twilio": "^5.3.4",
-    "resend": "^1.0.0"
+    "resend": "^1.0.0",
+    "twilio": "^5.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
